hide scrollbar and fix fingerprint height

--- a/app/style/components/user-profile.less
+++ b/app/style/components/user-profile.less
@@ -40,6 +40,7 @@ user-profile {
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow: hidden;
 }
 
 .user-profile-device-detail {
@@ -231,7 +232,7 @@ user-profile {
 }
 
 .user-profile-device-detail-fingerprint {
-  height: 258px;
+  height: 72px;
   margin-bottom: 16px;
   font-family: monospace;
 
